--- a/package.json
+++ b/package.json
@@ -7,22 +7,19 @@
     "ghost": ">=1.0.0"
   },
   "author": {
-      "name": "Todd Birchard",
-      "url": "https://toddbirchard.com"
+    "name": "Todd Birchard",
+    "email": "toddbirchard@gmail.com",
+    "url": "https://toddbirchard.com"
   },
   "screenshots": {
     "desktop": "https://miscellaneous.nyc3.digitaloceanspaces.com/hacker.jpg",
     "mobile": "assets/screenshot-mobile.jpg"
   },
-  "author": {
-    "name": "Todd Birchard",
-    "email": "toddbirchard@gmail.com",
-    "url": "https://toddbirchard.com"
-  },
   "config": {
     "posts_per_page": 10
   },
   "dependencies": {
+    "github-profile-card": "^2.0.1",
     "node-getpocket": "^1.0.0"
   }
 }
