--- a/package.json
+++ b/package.json
@@ -32,5 +32,15 @@
   "dependencies": {
     "github-profile-card": "^2.0.1",
     "node-getpocket": "^1.0.0"
+  },
+  "devDependencies": {
+    "gulp": "4.0.0",
+    "gulp-clean-css": "^3.9.4",
+    "gulp-concat": "^2.6.1",
+    "gulp-declare": "^0.3.0",
+    "gulp-handlebars": "^5.0.2",
+    "gulp-less": "^3.5.0",
+    "gulp-rename": "^1.3.0",
+    "gulp-uglify": "^3.0.0"
   }
 }
