--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "engines": {
     "ghost": ">=1.0.0"
   },
-  "author": {
+    "presets": ["env"],
+    "author": {
     "name": "Todd Birchard",
     "email": "toddbirchard@gmail.com",
     "url": "https://toddbirchard.com"
@@ -34,12 +35,13 @@
     "node-getpocket": "^1.0.0"
   },
   "devDependencies": {
+    "babel-preset-env": "^1.7.0",
     "gulp": "4.0.0",
     "gulp-clean-css": "^3.9.4",
     "gulp-concat": "^2.6.1",
     "gulp-declare": "^0.3.0",
     "gulp-handlebars": "^5.0.2",
-    "gulp-less": "^3.5.0",
+    "gulp-less": "^4.0.1",
     "gulp-rename": "^1.3.0",
     "gulp-uglify": "^3.0.0"
   }
