--- a/package.json
+++ b/package.json
@@ -6,6 +6,10 @@
   "engines": {
     "ghost": ">=1.0.0"
   },
+  "scripts": {
+    "babel": "babel --presets es2015 assets/js/includes/index.js -o assets/js/index.js",
+    "start": "http-server"
+  },
   "presets": [
     "env"
   ],
@@ -34,6 +38,7 @@
   },
   "dependencies": {
     "github-profile-card": "^2.0.1",
+    "mongodb-stitch-browser-core": "^4.0.9",
     "mongodb-stitch-browser-sdk": "^4.0.9",
     "node-getpocket": "^1.0.0"
   },
