--- a/package.json
+++ b/package.json
@@ -44,7 +44,7 @@
   },
   "devDependencies": {
     "babel-preset-env": "^1.7.0",
-    "gulp": "4.0.0",
+    "gulp": "^4.0.0",
     "gulp-clean-css": "^3.9.4",
     "gulp-concat": "^2.6.1",
     "gulp-declare": "^0.3.0",
