--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "babel-runtime": "^6.26.0",
     "ghost-email-service": "^1.2.0",
     "github-profile-card": "^2.0.1",
+    "materialize-css": "^1.0.0-rc.2",
     "mongodb-stitch": "^3.1.7",
     "mongodb-stitch-browser-core": "^4.0.9",
     "mongodb-stitch-browser-sdk": "^4.0.9",
@@ -61,4 +62,3 @@
     "webpack-stream": "^5.0.0"
   }
 }
-
