--- a/package.json
+++ b/package.json
@@ -41,7 +41,8 @@
     "mongodb-stitch": "^3.1.7",
     "mongodb-stitch-browser-core": "^4.0.9",
     "mongodb-stitch-browser-sdk": "^4.0.9",
-    "node-getpocket": "^1.0.0"
+    "node-getpocket": "^1.0.0",
+    "simplebar": "^3.0.0-beta.1"
   },
   "devDependencies": {
     "babel-cli": "^6.26.0",
@@ -59,6 +60,7 @@
     "gulp-less": "^4.0.1",
     "gulp-rename": "^1.3.0",
     "gulp-uglify": "^3.0.0",
+    "uglify-js": "^3.4.6",
     "webpack-stream": "^5.0.0"
   }
 }
