--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "posts_per_page": 10
   },
   "dependencies": {
+    "@sendgrid/mail": "^6.3.1",
     "babel-runtime": "^6.26.0",
     "ghost-email-service": "^1.2.0",
     "github-profile-card": "^2.0.1",
