finally fixed author sidebar

--- a/package.json
+++ b/package.json
@@ -39,9 +39,11 @@
     "ghost-email-service": "^1.2.0",
     "github-profile-card": "^2.0.1",
     "materialize-css": "^1.0.0-rc.2",
+    "mongodb": "^3.1.1",
     "mongodb-stitch": "^3.1.7",
     "mongodb-stitch-browser-core": "^4.0.9",
     "mongodb-stitch-browser-sdk": "^4.0.12",
+    "mongodb-stitch-server-sdk": "^4.0.13",
     "node-getpocket": "^1.0.0",
     "simplebar": "^3.0.0-beta.1",
     "swiper": "^4.3.5"
