--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "babel-runtime": "^6.26.0",
     "ghost-email-service": "^1.2.0",
     "github-profile-card": "^2.0.1",
+    "gulp-autoprefixer": "^6.0.0",
     "materialize-css": "^1.0.0-rc.2",
     "mongodb": "^3.1.4",
     "mongodb-stitch": "^3.2.1",
