--- a/package.json
+++ b/package.json
@@ -37,10 +37,14 @@
   "dependencies": {
     "@sendgrid/mail": "^6.3.1",
     "babel-runtime": "^6.26.0",
+    "fuzzy-search": "^2.1.0",
+    "fuzzysort": "^1.1.4",
     "ghost-email-service": "^1.2.0",
+    "ghost-search": "^0.1.0",
     "github-profile-card": "^2.0.1",
     "gulp-autoprefixer": "^6.0.0",
     "gulp-postcss": "^8.0.0",
+    "gulp-resolve-dependencies": "^2.2.0",
     "gulp-sourcemaps": "^2.6.4",
     "materialize-css": "^1.0.0-rc.2",
     "mongodb": "^3.1.4",
@@ -54,6 +58,9 @@
     "swiper": "^4.3.5"
   },
   "devDependencies": {
+    "@babel/cli": "^7.1.0",
+    "@babel/core": "^7.1.0",
+    "@babel/preset-env": "^7.1.0",
     "babel-cli": "^6.26.0",
     "babel-core": "^6.26.3",
     "babel-preset-env": "^1.7.0",
