--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
   "dependencies": {
     "@sendgrid/mail": "^6.3.1",
     "babel-runtime": "^6.26.0",
+    "bson-objectid": "^1.2.3",
     "fuzzy-search": "^2.1.0",
     "fuzzysort": "^1.1.4",
     "ghost-email-service": "^1.2.0",
