--- a/package.json
+++ b/package.json
@@ -46,24 +46,21 @@
     "gulp-postcss": "^8.0.0",
     "gulp-resolve-dependencies": "^2.2.0",
     "gulp-sourcemaps": "^2.6.4",
-    "materialize-css": "^1.0.0-rc.2",
+    "materialize-css": "^1.0.0",
     "mongodb-stitch-browser-sdk": "^4.0.8",
     "node-getpocket": "^1.0.0",
     "precss": "^3.1.2",
-    "simplebar": "^3.0.0-beta.4",
-    "swiper": "^4.3.5"
+    "simplebar": "^3.0.0-beta.5",
+    "swiper": "^4.4.1"
   },
   "devDependencies": {
-    "@babel/cli": "^7.1.0",
-    "@babel/core": "^7.1.0",
+    "@babel/cli": "^7.1.2",
+    "@babel/core": "^7.1.2",
     "@babel/preset-env": "^7.1.0",
-    "babel-cli": "^6.26.0",
-    "babel-core": "^6.26.3",
-    "babel-preset-env": "^1.7.0",
     "babelify": "^8.0.0",
     "browserify": "^16.2.3",
     "gulp": "^4.0.0",
-    "gulp-babel": "^7.0.1",
+    "gulp-babel": "^8.0.0-beta.2",
     "gulp-clean-css": "^3.10.0",
     "gulp-concat": "^2.6.1",
     "gulp-declare": "^0.3.0",
@@ -71,7 +68,7 @@
     "gulp-less": "^4.0.1",
     "gulp-rename": "^1.4.0",
     "gulp-uglify": "^3.0.1",
-    "uglify-js": "^3.4.8",
+    "uglify-js": "^3.4.9",
     "webpack-stream": "^5.1.1"
   }
 }
