--- a/package.json
+++ b/package.json
@@ -35,6 +35,8 @@
   },
   "dependencies": {
     "@babel/polyfill": "^7.0.0",
+    "@babel/runtime": "^7.1.2",
+    "@babel/runtime-corejs2": "^7.1.2",
     "@sendgrid/mail": "^6.3.1",
     "babel-runtime": "^6.26.0",
     "browser-sync": "^2.24.7",
@@ -44,6 +46,7 @@
     "ghost-search": "^0.1.0",
     "github-profile-card": "^2.0.1",
     "gulp-autoprefixer": "^6.0.0",
+    "gulp-exit": "0.0.2",
     "gulp-postcss": "^8.0.0",
     "gulp-resolve-dependencies": "^2.2.0",
     "gulp-sourcemaps": "^2.6.4",
@@ -58,11 +61,13 @@
   "devDependencies": {
     "@babel/cli": "^7.1.2",
     "@babel/core": "^7.1.2",
+    "@babel/plugin-transform-runtime": "^7.1.0",
     "@babel/preset-env": "^7.1.0",
     "babelify": "^8.0.0",
     "browserify": "^16.2.3",
     "gulp": "^4.0.0",
     "gulp-babel": "^8.0.0",
+    "gulp-clean": "^0.4.0",
     "gulp-clean-css": "^3.10.0",
     "gulp-concat": "^2.6.1",
     "gulp-declare": "^0.3.0",
