--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "stockholm",
   "description": "Stockholm: Minimal Ghost Theme.",
+  "homepage": "https://hackersandslackers.com",
   "demo": "https://hackersandslackers.com",
   "version": "0.0.1",
   "scripts": {
@@ -22,13 +23,16 @@
     "blog",
     "theme"
   ],
+  "engines": {
+    "node": "8.12.0"
+  },
   "screenshots": {
     "desktop": "https://miscellaneous.nyc3.digitaloceanspaces.com/hacker.jpg",
     "mobile": "assets/screenshot-mobile.jpg"
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/toddbirchard/ghosttheme-stockholm.git"
+    "url": "https://github.com/hackersandslackers/hackers.git"
   },
   "config": {
     "posts_per_page": 10
@@ -39,6 +43,7 @@
     "@babel/runtime-corejs2": "^7.1.2",
     "@sendgrid/mail": "^6.3.1",
     "babel-runtime": "^6.26.0",
+    "badgify": "^1.2.1",
     "browser-sync": "^2.24.7",
     "fuzzy-search": "^2.1.0",
     "fuzzysort": "^1.1.4",
@@ -57,7 +62,8 @@
     "precss": "^3.1.2",
     "semantic-ui-table": "^2.3.1",
     "simplebar": "^3.0.0-beta.5",
-    "swiper": "^4.4.1"
+    "swiper": "^4.4.1",
+    "yeoman-generator": "^3.1.1"
   },
   "devDependencies": {
     "@babel/cli": "^7.1.2",
