--- a/package.json
+++ b/package.json
@@ -75,6 +75,7 @@
     "browserify": "^16.2.3",
     "gulp": "^4.0.0",
     "gulp-babel": "^8.0.0",
+    "gulp-babel-minify": "^0.5.0",
     "gulp-clean": "^0.4.0",
     "gulp-clean-css": "^3.10.0",
     "gulp-concat": "^2.6.1",
@@ -85,5 +86,10 @@
     "gulp-rename": "^1.4.0",
     "uglify-js": "^3.4.9",
     "webpack-stream": "^5.1.1"
+  },
+  "babel": {
+    "presets": [
+      "env"
+    ]
   }
 }
