--- a/package.json
+++ b/package.json
@@ -48,11 +48,13 @@
     "fuzzy-search": "^2.1.0",
     "fuzzysort": "^1.1.4",
     "ghost-email-service": "^1.2.0",
+    "ghost-pagination": "^0.1.3",
     "ghost-search": "^0.1.0",
     "github-profile-card": "^2.0.1",
     "materialize-css": "^1.0.0",
     "mongodb-stitch-browser-sdk": "^4.0.13",
     "node-getpocket": "^1.0.0",
+    "paginate": "^0.2.0",
     "precss": "^3.1.2",
     "semantic-ui-table": "^2.3.1",
     "simplebar": "^3.0.0-beta.5",
@@ -65,7 +67,6 @@
     "@babel/plugin-syntax-dynamic-import": "^7.0.0",
     "@babel/plugin-transform-runtime": "^7.1.0",
     "@babel/preset-env": "^7.1.0",
-    "babelify": "^8.0.0",
     "browserify": "^16.2.3",
     "gulp": "^4.0.0",
     "gulp-babel": "^8.0.0",
