--- a/package.json
+++ b/package.json
@@ -68,22 +68,24 @@
     "babelify": "^8.0.0",
     "browserify": "^16.2.3",
     "gulp": "^4.0.0",
+    "gulp-autoprefixer": "^6.0.0",
     "gulp-babel": "^8.0.0",
     "gulp-babel-minify": "^0.5.0",
     "gulp-clean": "^0.4.0",
     "gulp-clean-css": "^3.10.0",
     "gulp-concat": "^2.6.1",
     "gulp-declare": "^0.3.0",
+    "gulp-exit": "0.0.2",
     "gulp-handlebars": "^5.0.2",
     "gulp-less": "^4.0.1",
     "gulp-livereload": "^4.0.0",
-    "gulp-rename": "^1.4.0",
-    "gulp-autoprefixer": "^6.0.0",
-    "gulp-exit": "0.0.2",
     "gulp-postcss": "^8.0.0",
+    "gulp-rename": "^1.4.0",
     "gulp-resolve-dependencies": "^2.2.0",
     "gulp-sourcemaps": "^2.6.4",
+    "gulp-terser": "^1.1.5",
     "gulp-uglify-es": "^1.0.4",
+    "terser": "^3.10.1",
     "uglify-js": "^3.4.9",
     "webpack-stream": "^5.1.1"
   },
