--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "ghost-pagination": "^0.1.3",
     "ghost-search": "^0.1.0",
     "github-profile-card": "^2.0.1",
+    "grabity": "^1.0.4",
     "materialize-css": "^1.0.0",
     "mongodb-stitch-browser-sdk": "^4.0.13",
     "paginate": "^0.2.0",
