--- a/package.json
+++ b/package.json
@@ -52,10 +52,11 @@
     "github-profile-card": "^2.0.1",
     "grabity": "^1.0.4",
     "materialize-css": "^1.0.0",
-    "mongodb-stitch-browser-sdk": "^4.0.13",
+    "mongodb-stitch-browser-core": "^4.0.14-5",
+    "mongodb-stitch-browser-sdk": "^4.0.14",
+    "mongodb-stitch-browser-services-http": "^4.0.14-5",
     "paginate": "^0.2.0",
     "precss": "^3.1.2",
-    "simplebar": "^3.0.0-beta.5",
     "swiper": "^4.4.1"
   },
   "devDependencies": {
@@ -64,12 +65,10 @@
     "@babel/plugin-syntax-dynamic-import": "^7.0.0",
     "@babel/plugin-transform-runtime": "^7.1.0",
     "@babel/preset-env": "^7.1.0",
-    "browserify": "^16.2.3",
     "gulp": "^4.0.0",
     "gulp-autoprefixer": "^6.0.0",
     "gulp-babel": "^8.0.0",
     "gulp-babel-minify": "^0.5.0",
-    "gulp-clean": "^0.4.0",
     "gulp-clean-css": "^3.10.0",
     "gulp-concat": "^2.6.1",
     "gulp-declare": "^0.3.0",
