--- a/package.json
+++ b/package.json
@@ -73,6 +73,7 @@
     "gulp-concat": "^2.6.1",
     "gulp-declare": "^0.3.0",
     "gulp-exit": "0.0.2",
+    "gulp-gzip": "^1.4.2",
     "gulp-handlebars": "^5.0.2",
     "gulp-less": "^4.0.1",
     "gulp-livereload": "^4.0.0",
