--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "stockholm",
-  "description": "Stockholm: Minimal Ghost Theme.",
+  "description": "Fully featured theme with minimalist presentation.",
   "homepage": "https://hackersandslackers.com",
   "demo": "https://hackersandslackers.com",
   "version": "0.0.1",
@@ -17,14 +17,14 @@
   },
   "keywords": [
     "ghost-theme",
-    "nodejs",
-    "ghost",
-    "express",
+    "data",
+    "engineering",
     "blog",
     "theme"
   ],
   "engines": {
-    "node": "8.12.0"
+    "node": "8.12.0",
+    "ghost": ">=2.0.0"
   },
   "screenshots": {
     "desktop": "https://miscellaneous.nyc3.digitaloceanspaces.com/hacker.jpg",
