--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "mongodb-stitch-browser-core": "^4.0.14-5",
     "mongodb-stitch-browser-sdk": "^4.0.14",
     "mongodb-stitch-browser-services-http": "^4.0.14-5",
+    "nord-highlightjs": "^0.1.0",
     "paginate": "^0.2.0",
     "precss": "^3.1.2",
     "swiper": "^4.4.1"
