revised package.json

--- a/.gitignore
+++ b/.gitignore
@@ -60,6 +60,11 @@ typings/
 # next.js build output
 .next
 
+# CI/CD
+buddy.yaml
+.travis.yaml
+
+
 # keys
 assets/js/secret.js
 assets/js/includes/secret.js
@@ -74,4 +79,8 @@ README.md
 # compiled
 assets/js/main.min.js
 /assets/js/main.min.js
+main.min.js
 index.js
+
+# assets
+bg.mp4
