added imagemin loop to gulp

--- a/package.json
+++ b/package.json
@@ -45,7 +45,6 @@
     "@sendgrid/mail": "^6.3.1",
     "autoprefixer": "^9.3.1",
     "babel-runtime": "^6.26.0",
-    "browser-sync": "^2.26.3",
     "fuzzy-search": "^2.1.0",
     "fuzzysort": "^1.1.4",
     "ghost-email-service": "^1.2.0",
@@ -53,6 +52,7 @@
     "ghost-search": "^0.1.0",
     "github-profile-card": "^2.0.1",
     "grabity": "^1.0.4",
+    "imagemin-jpegtran": "^6.0.0",
     "lightbox2": "^2.10.0",
     "mongodb-stitch-browser-core": "^4.0.14",
     "mongodb-stitch-browser-sdk": "^4.0.14",
@@ -68,6 +68,7 @@
     "@babel/plugin-syntax-dynamic-import": "^7.0.0",
     "@babel/plugin-transform-runtime": "^7.1.0",
     "@babel/preset-env": "^7.1.6",
+    "browser-sync": "^2.26.3",
     "gulp": "^4.0.0",
     "gulp-autoprefixer": "^6.0.0",
     "gulp-babel": "^8.0.0",
@@ -78,6 +79,7 @@
     "gulp-exit": "0.0.2",
     "gulp-gzip": "^1.4.2",
     "gulp-handlebars": "^5.0.2",
+    "gulp-imagemin": "^5.0.3",
     "gulp-less": "^4.0.1",
     "gulp-livereload": "^4.0.0",
     "gulp-postcss": "^8.0.0",
@@ -86,6 +88,8 @@
     "gulp-sourcemaps": "^2.6.4",
     "gulp-terser": "^1.1.5",
     "gulp-uglify-es": "^1.0.4",
+    "imagemin": "^6.0.0",
+    "imagemin-webp": "^4.1.0",
     "terser": "^3.10.11"
   },
   "babel": {
