--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "url": "https://toddbirchard.com"
   },
   "keywords": [
-    "ghost theme",
+    "ghost-theme",
     "nodejs",
     "blog theme",
     "blog",
