--- a/package.json
+++ b/package.json
@@ -68,6 +68,7 @@
     "@babel/plugin-transform-runtime": "^7.1.0",
     "@babel/preset-env": "^7.1.6",
     "browser-sync": "^2.26.3",
+    "css-declaration-sorter": "^4.0.1",
     "gulp": "^4.0.0",
     "gulp-autoprefixer": "^6.0.0",
     "gulp-babel": "^8.0.0",
@@ -78,12 +79,14 @@
     "gulp-exit": "0.0.2",
     "gulp-gzip": "^1.4.2",
     "gulp-handlebars": "^5.0.2",
+    "gulp-iconfont": "^10.0.2",
     "gulp-imagemin": "^5.0.3",
     "gulp-less": "^4.0.1",
     "gulp-livereload": "^4.0.0",
     "gulp-postcss": "^8.0.0",
     "gulp-rename": "^1.4.0",
     "gulp-resolve-dependencies": "^2.2.0",
+    "gulp-responsive": "^2.11.0",
     "gulp-sourcemaps": "^2.6.4",
     "gulp-terser": "^1.1.5",
     "gulp-uglify-es": "^1.0.4",
