--- a/package.json
+++ b/package.json
@@ -67,6 +67,7 @@
     "@babel/plugin-syntax-dynamic-import": "^7.0.0",
     "@babel/plugin-transform-runtime": "^7.1.0",
     "@babel/preset-env": "^7.1.6",
+    "assemble": "^0.24.3",
     "browser-sync": "^2.26.3",
     "css-declaration-sorter": "^4.0.1",
     "gulp": "^4.0.0",
