--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "@sendgrid/mail": "^6.3.1",
     "autoprefixer": "^9.3.1",
     "babel-runtime": "^6.26.0",
+    "cjs": "0.0.11",
     "fuzzy-search": "^2.1.0",
     "fuzzysort": "^1.1.4",
     "ghost-email-service": "^1.2.0",
@@ -58,7 +59,7 @@
     "mongodb-stitch-browser-services-http": "^4.0.14",
     "nord-highlightjs": "^0.1.0",
     "paginate": "^0.2.0",
-    "precss": "^3.1.2",
+    "precss": "^4.0.0",
     "swiper": "^4.4.2"
   },
   "devDependencies": {
@@ -74,12 +75,11 @@
     "gulp-autoprefixer": "^6.0.0",
     "gulp-babel": "^8.0.0",
     "gulp-babel-minify": "^0.5.0",
-    "gulp-clean-css": "^3.10.0",
+    "gulp-clean-css": "^4.0.0",
     "gulp-concat": "^2.6.1",
     "gulp-declare": "^0.3.0",
     "gulp-exit": "0.0.2",
     "gulp-gzip": "^1.4.2",
-    "gulp-handlebars": "^5.0.2",
     "gulp-iconfont": "^10.0.2",
     "gulp-imagemin": "^5.0.3",
     "gulp-less": "^4.0.1",
@@ -88,12 +88,12 @@
     "gulp-rename": "^1.4.0",
     "gulp-resolve-dependencies": "^2.2.0",
     "gulp-responsive": "^2.11.0",
-    "gulp-sourcemaps": "^2.6.4",
     "gulp-terser": "^1.1.5",
     "gulp-uglify-es": "^1.0.4",
     "imagemin": "^6.0.0",
     "imagemin-jpegtran": "^6.0.0",
-    "imagemin-webp": "^4.1.0",
+    "imagemin-webp": "^5.0.0",
+    "sharp": "^0.21.1",
     "terser": "^3.10.11"
   },
   "babel": {
