--- a/package.json
+++ b/package.json
@@ -18,22 +18,21 @@
   },
   "keywords": [
     "ghost-theme",
-    "nodejs",
     "blog theme",
-    "blog",
-    "theme"
+    "nodejs",
+    "hackers"
   ],
   "engines": {
-    "node": "8.12.0",
-    "ghost": ">=2.5.0"
+    "node": "v10.13.0",
+    "ghost": ">=2.7.1"
   },
   "screenshots": {
-    "desktop": "https://miscellaneous.nyc3.digitaloceanspaces.com/hacker.jpg",
-    "mobile": "assets/screenshot-mobile.jpg"
+    "desktop": "https://github.com/toddbirchard/ghosttheme-stockholm/raw/master/assets/images/stockholm2.jpg",
+    "mobile": "https://github.com/toddbirchard/ghosttheme-stockholm/raw/master/assets/images/stockholm2.jpg"
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/hackersandslackers/hackers.git"
+    "url": "https://github.com/toddbirchard/ghosttheme-stockholm"
   },
   "config": {
     "posts_per_page": 10
