--- a/package.json
+++ b/package.json
@@ -82,6 +82,8 @@
     "gulp-resolve-dependencies": "^2.2.0",
     "gulp-terser": "^1.1.6",
     "gulp-uglify-es": "^1.0.4",
+    "less-loader": "^4.1.0",
+    "mini-css-extract-plugin": "^0.5.0",
     "terser": "^3.11.0",
     "webpack": "^4.27.1",
     "webpack-cli": "^3.1.2"
