--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "stockholm",
   "description": "Fully featured theme with minimalist presentation.",
-  "homepage": "https://hackersandslackers.com",
+  "homepage": "https://ghostthemes.io",
   "demo": "https://hackersandslackers.com",
   "version": "0.0.1",
   "scripts": {
@@ -27,12 +27,12 @@
     "ghost": ">=2.7.1"
   },
   "screenshots": {
-    "desktop": "https://github.com/toddbirchard/ghosttheme-stockholm/raw/master/assets/images/stockholm2.jpg",
-    "mobile": "https://github.com/toddbirchard/ghosttheme-stockholm/raw/master/assets/images/stockholm2.jpg"
+    "desktop": "https://miscellaneous.nyc3.digitaloceanspaces.com/tokyodrift.jpg",
+    "mobile": "https://miscellaneous.nyc3.digitaloceanspaces.com/tokyodrift.jpg"
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/toddbirchard/ghosttheme-stockholm"
+    "url": "https://github.com/toddbirchard/ghosttheme-tokyo"
   },
   "config": {
     "posts_per_page": 10
