--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "stockholm",
   "description": "Fully featured theme with minimalist presentation.",
-  "homepage": "https://ghostthemes.io",
+  "homepage": "https://hackersandslackers.com",
   "demo": "https://hackersandslackers.com",
   "version": "0.0.1",
   "scripts": {
