--- a/package.json
+++ b/package.json
@@ -23,16 +23,16 @@
     "hackers"
   ],
   "engines": {
-    "node": "v10.13.0",
+    "node": "v10.15.0",
     "ghost": ">=2.7.1"
   },
   "screenshots": {
-    "desktop": "https://miscellaneous.nyc3.digitaloceanspaces.com/tokyodrift.jpg",
-    "mobile": "https://miscellaneous.nyc3.digitaloceanspaces.com/tokyodrift.jpg"
+    "desktop": "https://raw.githubusercontent.com/toddbirchard/ghosttheme-stockholm/master/assets/images/stockholm4.jpg",
+    "mobile": "https://raw.githubusercontent.com/toddbirchard/ghosttheme-stockholm/master/assets/images/stockholm4.jpg"
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/toddbirchard/ghosttheme-tokyo"
+    "url": "https://github.com/toddbirchard/ghosttheme-stockholm"
   },
   "config": {
     "posts_per_page": 10
@@ -52,9 +52,6 @@
     "ghost-search": "^0.1.1",
     "github-profile-card": "^2.0.1",
     "lightbox2": "^2.10.0",
-    "mongodb-stitch-browser-core": "^4.1.1",
-    "mongodb-stitch-browser-sdk": "^4.1.1",
-    "mongodb-stitch-browser-services-http": "^4.1.1",
     "nord-highlightjs": "^0.1.0",
     "paginate": "^0.2.0",
     "precss": "^4.0.0",
