--- a/package.json
+++ b/package.json
@@ -35,7 +35,21 @@
     "url": "https://github.com/toddbirchard/ghosttheme-stockholm"
   },
   "config": {
-    "posts_per_page": 10
+    "posts_per_page": 10,
+    "image_sizes": {
+        "xs": {
+            "width": 120
+        },
+        "s": {
+            "width": 300
+        },
+        "m": {
+            "width": 653
+        },
+        "l": {
+            "width": 735
+        }
+    }
   },
   "dependencies": {
     "@babel/polyfill": "^7.0.0",
