--- a/package.json
+++ b/package.json
@@ -4,9 +4,11 @@
   "homepage": "https://hackersandslackers.com",
   "demo": "https://hackersandslackers.com",
   "version": "0.0.1",
+  "main": "index.js",
   "scripts": {
-    "dev": "",
-    "build": ""
+    "clean": "rm dist/bundle.js",
+    "build-dev": "webpack -d --mode development",
+    "build-prod": "webpack -p --mode production"
   },
   "presets": [
     "env"
@@ -37,18 +39,18 @@
   "config": {
     "posts_per_page": 10,
     "image_sizes": {
-        "xs": {
-            "width": 120
-        },
-        "s": {
-            "width": 300
-        },
-        "m": {
-            "width": 653
-        },
-        "l": {
-            "width": 735
-        }
+      "xs": {
+        "width": 120
+      },
+      "s": {
+        "width": 300
+      },
+      "m": {
+        "width": 653
+      },
+      "l": {
+        "width": 735
+      }
     }
   },
   "dependencies": {
@@ -80,7 +82,8 @@
     "@babel/plugin-transform-runtime": "^7.2.0",
     "@babel/preset-env": "^7.2.0",
     "babel-loader": "^8.0.4",
-    "css-declaration-sorter": "^4.0.1",
+    "css-declaration-sorter": "4.0.1",
+    "css-loader": "^2.1.0",
     "gulp": "^4.0.0",
     "gulp-autoprefixer": "^6.0.0",
     "gulp-babel": "^8.0.0",
@@ -98,12 +101,14 @@
     "less-loader": "^4.1.0",
     "mini-css-extract-plugin": "^0.5.0",
     "parcel-bundler": "^1.11.0",
-    "css-declaration-sorter": "4.0.1",
-    "terser": "^3.11.0"
+    "style-loader": "^0.23.1",
+    "terser": "^3.11.0",
+    "webpack": "^4.29.0",
+    "webpack-cli": "^3.2.1"
   },
   "babel": {
     "presets": [
-       "@babel/preset-env"
+      "@babel/preset-env"
     ]
   }
 }
