--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
   "main": "index.js",
   "scripts": {
     "clean": "rm dist/bundle.js",
-    "build-dev": "webpack -d --mode development",
+    "develop": "webpack -d --mode development",
+    "build": "webpack",
     "build-prod": "webpack -p --mode production"
   },
   "presets": [
@@ -63,7 +64,6 @@
     "cjs": "0.0.11",
     "do-assets": "0.0.2",
     "fs": "0.0.1-security",
-    "fuzzy-search": "^3.0.1",
     "fuzzysort": "^1.1.4",
     "ghost-email-service": "^1.2.0",
     "ghost-pagination": "^0.1.3",
@@ -84,6 +84,8 @@
     "babel-loader": "^8.0.4",
     "css-declaration-sorter": "4.0.1",
     "css-loader": "^2.1.0",
+    "file-loader": "^3.0.1",
+    "font-config-webpack-plugin": "^1.3.1",
     "gulp": "^4.0.0",
     "gulp-autoprefixer": "^6.0.0",
     "gulp-babel": "^8.0.0",
@@ -103,6 +105,7 @@
     "parcel-bundler": "^1.11.0",
     "style-loader": "^0.23.1",
     "terser": "^3.11.0",
+    "url-loader": "^1.1.2",
     "webpack": "^4.29.0",
     "webpack-cli": "^3.2.1"
   },
