--- a/package.json
+++ b/package.json
@@ -85,6 +85,7 @@
     "css-loader": "^2.1.0",
     "file-loader": "^3.0.1",
     "font-config-webpack-plugin": "^1.3.1",
+    "less": "^3.9.0",
     "less-loader": "^4.1.0",
     "mini-css-extract-plugin": "^0.5.0",
     "parcel-bundler": "^1.11.0",
