--- a/package.json
+++ b/package.json
@@ -54,6 +54,13 @@
       }
     }
   },
+  "postcss": {
+    "parser": "sugarss",
+    "map": false,
+    "plugins": {
+      "postcss-plugin": {}
+    }
+  },
   "dependencies": {
     "@babel/polyfill": "^7.0.0",
     "@babel/runtime": "^7.2.0",
@@ -68,6 +75,7 @@
     "ghost-pagination": "^0.1.3",
     "ghost-search": "^0.1.1",
     "github-profile-card": "^2.0.1",
+    "jquery": "^3.3.1",
     "lightbox2": "^2.10.0",
     "nord-highlightjs": "^0.1.0",
     "paginate": "^0.2.0",
@@ -83,18 +91,31 @@
     "babel-loader": "^8.0.4",
     "css-declaration-sorter": "4.0.1",
     "css-loader": "^2.1.0",
+    "eslint": "^5.12.1",
+    "eslint-loader": "^2.1.1",
+    "extract-text-webpack-plugin": "^3.0.2",
     "file-loader": "^3.0.1",
     "font-config-webpack-plugin": "^1.3.1",
+    "jquery.easing": "^1.4.1",
     "less": "^3.9.0",
     "less-loader": "^4.1.0",
     "mini-css-extract-plugin": "^0.5.0",
-    "parcel-bundler": "^1.11.0",
+    "postcss-load-config": "^2.0.0",
+    "postcss-loader": "^3.0.0",
+    "postcss-plugin": "^1.0.0",
     "style-loader": "^0.23.1",
     "terser": "^3.11.0",
+    "terser-webpack-plugin": "^1.2.1",
     "url-loader": "^1.1.2",
     "webpack": "^4.29.0",
     "webpack-cli": "^3.2.1"
   },
+  "eslintConfig": {
+       "plugins": ["example"],
+       "env": {
+           "example/custom": true
+       }
+   },
   "babel": {
     "presets": [
       "@babel/preset-env"
