--- a/package.json
+++ b/package.json
@@ -84,15 +84,13 @@
   },
   "devDependencies": {
     "@babel/cli": "^7.2.0",
-    "@babel/core": "^7.2.0",
+    "@babel/core": "^7.2.2",
     "@babel/plugin-syntax-dynamic-import": "^7.2.0",
     "@babel/plugin-transform-runtime": "^7.2.0",
-    "@babel/preset-env": "^7.2.0",
-    "babel-loader": "^8.0.4",
+    "@babel/preset-env": "^7.3.1",
+    "babel-loader": "^8.0.5",
     "css-declaration-sorter": "4.0.1",
     "css-loader": "^2.1.0",
-    "eslint": "^5.12.1",
-    "eslint-loader": "^2.1.1",
     "extract-text-webpack-plugin": "^3.0.2",
     "file-loader": "^3.0.1",
     "font-config-webpack-plugin": "^1.3.1",
@@ -111,11 +109,13 @@
     "webpack-cli": "^3.2.1"
   },
   "eslintConfig": {
-       "plugins": ["example"],
-       "env": {
-           "example/custom": true
-       }
-   },
+    "plugins": [
+      "example"
+    ],
+    "env": {
+      "example/custom": true
+    }
+  },
   "babel": {
     "presets": [
       "@babel/preset-env"
