--- a/package.json
+++ b/package.json
@@ -66,14 +66,15 @@
     "@babel/runtime": "^7.2.0",
     "@babel/runtime-corejs2": "^7.2.0",
     "@sendgrid/mail": "^6.3.1",
-    "autoprefixer": "^9.4.2",
+    "autoprefixer": "^9.4.7",
     "babel-runtime": "^6.26.0",
     "cjs": "0.0.11",
+    "do-assets": "0.0.2",
     "fs": "0.0.1-security",
     "fuzzysort": "^1.1.4",
     "ghost-email-service": "^1.2.0",
     "ghost-pagination": "^0.1.3",
-    "ghost-search": "^0.1.1",
+    "ghost-search": "^1.0.1",
     "github-profile-card": "^2.0.1",
     "jquery": "^3.3.1",
     "lightbox2": "^2.10.0",
@@ -108,14 +109,6 @@
     "url-loader": "^1.1.2",
     "webpack": "^4.29.0",
     "webpack-cli": "^3.2.1"
-  },
-  "eslintConfig": {
-    "plugins": [
-      "example"
-    ],
-    "env": {
-      "example/custom": true
-    }
   },
   "babel": {
     "presets": [
