--- a/package.json
+++ b/package.json
@@ -55,10 +55,10 @@
     }
   },
   "postcss": {
-  "plugins": {
-    "autoprefixer": {}
-  }
-},
+    "plugins": {
+      "autoprefixer": {}
+    }
+  },
   "dependencies": {
     "@babel/polyfill": "^7.0.0",
     "@babel/runtime": "^7.2.0",
@@ -74,6 +74,7 @@
     "ghost-pagination": "^0.1.3",
     "ghost-search": "^1.0.1",
     "github-profile-card": "^2.0.1",
+    "highlight.js": "^9.14.2",
     "jquery": "^3.3.1",
     "lightbox2": "^2.10.0",
     "nord-highlightjs": "^0.1.0",
