--- a/package.json
+++ b/package.json
@@ -99,6 +99,7 @@
     "less": "^3.9.0",
     "less-loader": "^4.1.0",
     "mini-css-extract-plugin": "^0.5.0",
+    "optimize-css-assets-webpack-plugin": "^5.0.1",
     "postcss-less": "^3.1.2",
     "postcss-load-config": "^2.0.0",
     "postcss-loader": "^3.0.0",
@@ -106,6 +107,7 @@
     "style-loader": "^0.23.1",
     "terser": "^3.11.0",
     "terser-webpack-plugin": "^1.2.1",
+    "uglifyjs-webpack-plugin": "^2.1.1",
     "url-loader": "^1.1.2",
     "webpack": "^4.29.0",
     "webpack-cli": "^3.2.1"
