--- a/package.json
+++ b/package.json
@@ -4,11 +4,11 @@
   "homepage": "https://hackersandslackers.com",
   "demo": "https://hackersandslackers.com",
   "version": "0.0.1",
-  "main": "index.js",
+  "main": "webpack/global.js",
   "scripts": {
     "clean": "rm dist/bundle.js",
     "develop": "webpack -d --mode development",
-    "build": "webpack",
+    "build": "webpack --mode production",
     "build-prod": "webpack -p --mode production"
   },
   "presets": [
