--- a/package.json
+++ b/package.json
@@ -80,8 +80,7 @@
     "nord-highlightjs": "^0.1.0",
     "paginate": "^0.2.0",
     "precss": "^4.0.0",
-    "scrollbooster": "^1.1.0",
-    "swiper": "^4.4.6"
+    "scrollbooster": "^1.1.0"
   },
   "devDependencies": {
     "@babel/cli": "^7.2.0",
