--- a/package.json
+++ b/package.json
@@ -89,6 +89,7 @@
     "@babel/plugin-transform-runtime": "^7.2.0",
     "@babel/preset-env": "^7.3.1",
     "babel-loader": "^8.0.5",
+    "jquery": "^3.3.0",
     "css-declaration-sorter": "4.0.1",
     "css-loader": "^2.1.0",
     "extract-text-webpack-plugin": "^3.0.2",
