--- a/package.json
+++ b/package.json
@@ -76,10 +76,14 @@
     "github-profile-card": "^2.0.1",
     "highlight.js": "^9.14.2",
     "jquery": "^3.3.1",
+    "jquery.easing": "^1.4.1",
     "lightbox2": "^2.10.0",
+    "node-gyp": "^3.8.0",
     "nord-highlightjs": "^0.1.0",
     "paginate": "^0.2.0",
     "precss": "^4.0.0",
+    "retina": "^0.1.1",
+    "retinajs": "^2.1.3",
     "scrollbooster": "^1.1.0"
   },
   "devDependencies": {
@@ -89,13 +93,11 @@
     "@babel/plugin-transform-runtime": "^7.2.0",
     "@babel/preset-env": "^7.3.1",
     "babel-loader": "^8.0.5",
-    "jquery": "^3.3.0",
     "css-declaration-sorter": "4.0.1",
     "css-loader": "^2.1.0",
     "extract-text-webpack-plugin": "^3.0.2",
     "file-loader": "^3.0.1",
     "font-config-webpack-plugin": "^1.3.1",
-    "jquery.easing": "^1.4.1",
     "less": "^3.9.0",
     "less-loader": "^4.1.0",
     "mini-css-extract-plugin": "^0.5.0",
