--- a/package.json
+++ b/package.json
@@ -66,6 +66,7 @@
     "@sendgrid/mail": "^6.3.1",
     "autoprefixer": "^9.4.7",
     "babel-runtime": "^6.26.0",
+    "bundle-loader": "^0.5.6",
     "cjs": "0.0.11",
     "do-assets": "0.0.2",
     "fs": "0.0.1-security",
