--- a/package.json
+++ b/package.json
@@ -76,6 +76,7 @@
     "ghost-search": "^1.0.1",
     "github-profile-card": "^2.0.1",
     "highlight.js": "^9.14.2",
+    "jquery": "^3.3.1",
     "lightbox2": "^2.10.0",
     "node-fetch": "^2.3.0",
     "paginate": "^0.2.0",
