--- a/package.json
+++ b/package.json
@@ -45,7 +45,7 @@
         "width": 26
       },
       "s": {
-        "width": 300
+        "width": 370
       },
       "m": {
         "width": 700
@@ -70,6 +70,7 @@
     "@sendgrid/mail": "^6.3.1",
     "autoprefixer": "^9.4.7",
     "babel-runtime": "^6.26.0",
+    "baguettebox.js": "^1.11.0",
     "bundle-loader": "^0.5.6",
     "cjs": "0.0.11",
     "do-assets": "0.0.2",
