--- a/package.json
+++ b/package.json
@@ -47,11 +47,20 @@
       "s": {
         "width": 370
       },
+      "s@2x": {
+        "width": 840
+      },
       "m": {
         "width": 700
       },
+      "m@2x": {
+        "width": 1400
+      },
       "l": {
         "width": 780
+      },
+      "l@2x": {
+        "width": 1560
       },
       "xl": {
         "width": 1500
@@ -65,18 +74,20 @@
   },
   "dependencies": {
     "@babel/polyfill": "^7.2.5",
-    "@babel/runtime": "^7.3.1",
-    "@babel/runtime-corejs2": "^7.3.1",
+    "@babel/runtime": "^7.3.4",
+    "@babel/runtime-corejs2": "^7.3.4",
     "@sendgrid/mail": "^6.3.1",
-    "autoprefixer": "^9.4.7",
+    "autoprefixer": "^9.4.9",
     "babel-runtime": "^6.26.0",
+    "baguettebox.js": "^1.11.0",
     "bundle-loader": "^0.5.6",
     "fuzzysort": "^1.1.4",
     "ghost-email-service": "^1.2.0",
     "ghost-pagination": "^0.1.3",
     "ghost-search": "^1.0.1",
     "github-profile-card": "^2.0.1",
-    "highlight.js": "^9.14.2",
+    "graphql-request": "^1.8.2",
+    "highlight.js": "^9.15.6",
     "jquery": "^3.3.1",
     "node-fetch": "^2.3.0",
     "paginate": "^0.2.0",
@@ -86,16 +97,17 @@
   },
   "devDependencies": {
     "@babel/cli": "^7.2.3",
-    "@babel/core": "^7.2.2",
+    "@babel/core": "^7.3.4",
     "@babel/plugin-syntax-dynamic-import": "^7.2.0",
-    "@babel/plugin-transform-runtime": "^7.2.0",
-    "@babel/preset-env": "^7.3.1",
+    "@babel/plugin-transform-runtime": "^7.3.4",
+    "@babel/preset-env": "^7.3.4",
     "babel-loader": "^8.0.5",
     "css-declaration-sorter": "4.0.1",
     "css-loader": "^2.1.0",
     "extract-text-webpack-plugin": "^3.0.2",
     "file-loader": "^3.0.1",
     "font-config-webpack-plugin": "^1.3.1",
+    "imagemin-webp-webpack-plugin": "^3.1.0",
     "less": "^3.9.0",
     "less-loader": "^4.1.0",
     "mini-css-extract-plugin": "^0.5.0",
@@ -106,10 +118,10 @@
     "postcss-plugin": "^1.0.0",
     "style-loader": "^0.23.1",
     "terser": "^3.16.1",
-    "terser-webpack-plugin": "^1.2.2",
-    "uglifyjs-webpack-plugin": "^2.1.1",
+    "terser-webpack-plugin": "^1.2.3",
+    "uglifyjs-webpack-plugin": "^2.1.2",
     "url-loader": "^1.1.2",
-    "webpack": "^4.29.3",
+    "webpack": "^4.29.6",
     "webpack-cli": "^3.2.3"
   },
   "babel": {
