--- a/package.json
+++ b/package.json
@@ -72,6 +72,7 @@
     "@babel/runtime": "^7.3.4",
     "@babel/runtime-corejs2": "^7.3.4",
     "@sendgrid/mail": "^6.3.1",
+    "@types/highlight.js": "^9.12.3",
     "autoprefixer": "^9.4.10",
     "babel-runtime": "^6.26.0",
     "baguettebox.js": "^1.11.0",
