--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
   "scripts": {
     "clean": "rm dist/bundle.js",
     "develop": "webpack -d --mode development",
-    "build": "webpack --mode production"
+    "build": "webpack --mode production",
+    "test": "NODE_ENV=/"
   },
   "presets": [
     "env"
@@ -74,9 +75,12 @@
     "@sendgrid/mail": "^6.3.1",
     "@types/highlight.js": "^9.12.3",
     "autoprefixer": "^9.4.10",
+    "babel-register": "^6.26.0",
     "babel-runtime": "^6.26.0",
     "baguettebox.js": "^1.11.0",
     "bundle-loader": "^0.5.6",
+    "dotenv-webpack": "^1.7.0",
+    "fs": "0.0.1-security",
     "fuzzysort": "^1.1.4",
     "ghost-email-service": "^1.2.0",
     "ghost-pagination": "^0.1.3",
