--- a/package.json
+++ b/package.json
@@ -104,15 +104,18 @@
     "babel-loader": "^8.0.5",
     "css-declaration-sorter": "4.0.1",
     "css-loader": "^2.1.1",
+    "eslint-loader": "^2.1.2",
     "extract-text-webpack-plugin": "^3.0.2",
     "file-loader": "^3.0.1",
     "font-config-webpack-plugin": "^1.3.1",
+    "html-minifier-webpack-plugin": "^2.0.0",
     "imagemin-webp-webpack-plugin": "^3.1.0",
     "less": "^3.9.0",
     "less-loader": "^4.1.0",
     "mini-css-extract-plugin": "^0.5.0",
     "optimize-css-assets-webpack-plugin": "^5.0.1",
     "postcss-less": "^3.1.2",
+    "postcss-loader": "^3.0.0",
     "style-loader": "^0.23.1",
     "terser": "^3.16.1",
     "terser-webpack-plugin": "^1.2.3",
