--- a/package.json
+++ b/package.json
@@ -21,14 +21,14 @@
   },
   "keywords": [
     "ghost-theme",
-    "blog theme",
+    "blog-theme",
     "nodejs",
-    "datascience",
-    "dataengineering"
+    "data-science",
+    "data-engineering"
   ],
   "engines": {
     "node": "v10.15.0",
-    "ghost": ">=2.16.0",
+    "ghost": ">=2.18.0",
     "ghost-api": "v2"
   },
   "screenshots": {
@@ -74,7 +74,7 @@
     "@babel/runtime-corejs2": "^7.3.4",
     "@sendgrid/mail": "^6.3.1",
     "@types/highlight.js": "^9.12.3",
-    "autoprefixer": "^9.4.10",
+    "autoprefixer": "^9.5.0",
     "babel-register": "^6.26.0",
     "babel-runtime": "^6.26.0",
     "baguettebox.js": "^1.11.0",
@@ -114,14 +114,14 @@
     "less-loader": "^4.1.0",
     "mini-css-extract-plugin": "^0.5.0",
     "optimize-css-assets-webpack-plugin": "^5.0.1",
-    "postcss-less": "^3.1.2",
+    "postcss-less": "^3.1.4",
     "postcss-loader": "^3.0.0",
     "style-loader": "^0.23.1",
-    "terser": "^3.16.1",
+    "terser": "^3.17.0",
     "terser-webpack-plugin": "^1.2.3",
     "uglifyjs-webpack-plugin": "^2.1.2",
     "webpack": "^4.29.6",
-    "webpack-cli": "^3.2.3"
+    "webpack-cli": "^3.3.0"
   },
   "babel": {
     "presets": [
