--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "stockholm",
-  "description": "Fully featured theme with minimalist presentation.",
+  "description": "Fully featured theme with clean presentation.",
   "homepage": "https://hackersandslackers.com",
   "demo": "https://hackersandslackers.com",
   "version": "0.0.1",
@@ -32,8 +32,8 @@
     "ghost-api": "v2"
   },
   "screenshots": {
-    "desktop": "https://raw.githubusercontent.com/toddbirchard/ghosttheme-stockholm/master/assets/images/stockholm4.jpg",
-    "mobile": "https://raw.githubusercontent.com/toddbirchard/ghosttheme-stockholm/master/assets/images/stockholm4.jpg"
+    "desktop": "https://hackers.nyc3.cdn.digitaloceanspaces.com/img/desktop-screenshot.jpg",
+    "mobile": "https://hackers.nyc3.cdn.digitaloceanspaces.com/img/mobile-screenshot.png"
   },
   "repository": {
     "type": "git",
@@ -78,20 +78,14 @@
     "babel-runtime": "^6.26.0",
     "baguettebox.js": "^1.11.0",
     "dotenv-webpack": "^1.7.0",
-    "fraql": "^1.2.1",
     "fuzzysort": "^1.1.4",
     "ghost-email-service": "^1.2.0",
     "ghost-pagination": "^0.1.3",
     "ghost-search": "^1.0.1",
     "github-profile-card": "^2.0.1",
-    "graphql": "^14.1.1",
     "graphql-request": "^1.8.2",
-    "graphql-tag": "^2.10.1",
-    "graphql-tools": "^4.0.4",
     "highlight.js": "^9.15.6",
     "jquery": "^3.3.1",
-    "lokka": "^1.7.0",
-    "lokka-transport-http": "^1.6.1",
     "node-fetch": "^2.3.0",
     "paginate": "^0.2.0",
     "scrollbooster": "^1.1.0",
