--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "homepage": "https://hackersandslackers.com",
   "demo": "https://hackersandslackers.com",
   "version": "0.0.1",
-  "main": "webpack/global.js",
+  "main": "src/js/global.js",
   "scripts": {
     "clean": "rm dist/bundle.js",
     "develop": "webpack -d --mode development",
