--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "version": "0.0.1",
   "main": "src/js/global.js",
   "scripts": {
-    "clean": "rm dist/bundle.js",
+    "clean": "rm js/bundle.js",
     "develop": "webpack -d --mode development",
     "build": "webpack --mode production",
     "test": "NODE_ENV=/"
