--- a/package.json
+++ b/package.json
@@ -69,8 +69,8 @@
     }
   },
   "dependencies": {
-    "@babel/runtime": "^7.4.2",
     "@babel/polyfill": "^7.4.0",
+    "@babel/runtime": "^7.4.2",
     "@babel/runtime-corejs2": "^7.4.2",
     "@sendgrid/mail": "^6.3.1",
     "@types/highlight.js": "^9.12.3",
@@ -89,6 +89,22 @@
     "graphql-tag": "^2.10.1",
     "graphql-tools": "^4.0.4",
     "highlight.js": "^9.15.6",
+    "hyper-blink": "^1.1.2",
+    "hyper-capture": "^0.3.2",
+    "hyper-chesterish": "^1.2.8",
+    "hyper-dark-scrollbar": "^1.2.4",
+    "hyper-media-control": "^1.5.3",
+    "hyper-spotify": "^5.1.1",
+    "hyper-startup": "^0.2.0",
+    "hyper-statusline": "^1.7.6",
+    "hyper-tab-icons": "^2.1.0",
+    "hyper-tabs-enhanced": "^0.4.2",
+    "hypergoogle": "0.0.2",
+    "hypergravity": "^1.0.5",
+    "hyperterm-close-on-left": "^1.0.1",
+    "hyperterm-cursor": "0.0.3",
+    "hyperterm-lastpass": "^1.0.1",
+    "hyperterm-safepaste": "^1.0.5",
     "jquery": "^3.3.1",
     "node-fetch": "^2.3.0",
     "paginate": "^0.2.0",
