--- a/package.json
+++ b/package.json
@@ -74,6 +74,7 @@
     "@babel/runtime-corejs2": "^7.4.2",
     "@sendgrid/mail": "^6.3.1",
     "@types/highlight.js": "^9.12.3",
+    "apollo-fetch": "^0.7.0",
     "babel-register": "^6.26.0",
     "babel-runtime": "^6.26.0",
     "baguettebox.js": "^1.11.0",
