--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
   ],
   "engines": {
     "node": "v10.15.0",
-    "ghost": ">=2.18.0",
+    "ghost": ">=2.19.0",
     "ghost-api": "v2"
   },
   "screenshots": {
@@ -74,7 +74,6 @@
     "@babel/runtime-corejs2": "^7.4.2",
     "@sendgrid/mail": "^6.3.1",
     "@types/highlight.js": "^9.12.3",
-    "apollo-fetch": "^0.7.0",
     "babel-register": "^6.26.0",
     "babel-runtime": "^6.26.0",
     "baguettebox.js": "^1.11.0",
@@ -90,22 +89,6 @@
     "graphql-tag": "^2.10.1",
     "graphql-tools": "^4.0.4",
     "highlight.js": "^9.15.6",
-    "hyper-blink": "^1.1.2",
-    "hyper-capture": "^0.3.2",
-    "hyper-chesterish": "^1.2.8",
-    "hyper-dark-scrollbar": "^1.2.4",
-    "hyper-media-control": "^1.5.3",
-    "hyper-spotify": "^5.1.1",
-    "hyper-startup": "^0.2.0",
-    "hyper-statusline": "^1.7.6",
-    "hyper-tab-icons": "^2.1.0",
-    "hyper-tabs-enhanced": "^0.4.2",
-    "hypergoogle": "0.0.2",
-    "hypergravity": "^1.0.5",
-    "hyperterm-close-on-left": "^1.0.1",
-    "hyperterm-cursor": "0.0.3",
-    "hyperterm-lastpass": "^1.0.1",
-    "hyperterm-safepaste": "^1.0.5",
     "jquery": "^3.3.1",
     "node-fetch": "^2.3.0",
     "paginate": "^0.2.0",
@@ -120,16 +103,14 @@
     "babel-loader": "^8.0.5",
     "css-declaration-sorter": "4.0.1",
     "css-loader": "^2.1.1",
+    "eslint": "^5.16.0",
     "eslint-loader": "^2.1.2",
-    "extract-text-webpack-plugin": "^3.0.2",
     "file-loader": "^3.0.1",
     "font-config-webpack-plugin": "^1.3.1",
     "html-minifier-webpack-plugin": "^2.0.0",
     "less": "^3.9.0",
     "less-loader": "^4.1.0",
     "mini-css-extract-plugin": "^0.5.0",
-    "postcss-less": "^3.1.4",
-    "postcss-loader": "^3.0.0",
     "style-loader": "^0.23.1",
     "uglifyjs-webpack-plugin": "^2.1.2",
     "webpack": "^4.29.6",
